--- a/offerScript.html
+++ b/offerScript.html
@@ -173,9 +173,285 @@ fetchOffers('');
   </script>
 
 
-rtrtdf
-dfgdfgdf
-DFGDFGDFG
-DFGDFGDFGFDGDFG
-DFGDFGDFGFDGDFGD
-DFGDFGDFFGDDFDFGDFG
+
+
+
+
+
+
+
+
+
+/// 
+
+
+const openBtn = document.getElementById('openModalBtn');
+    const closeBtn = document.getElementById('closeModalBtn');
+    const cancelBtn = document.getElementById('cancelBtn');
+    const modal = document.getElementById('modalOverlay');
+  
+    openBtn.onclick = () => modal.classList.remove('hidden');
+    closeBtn.onclick = () => modal.classList.add('hidden');
+    cancelBtn.onclick = () => modal.classList.add('hidden');
+    document.querySelectorAll('.edit-offer-btn').forEach(btn => {
+  btn.addEventListener('click', function () {
+    // Set all fields
+    document.getElementById('editOfferId').value = this.dataset.offerId || '';
+    document.getElementById('editOfferName').value = this.dataset.offerName || '';
+    document.getElementById('editOfferType').value = this.dataset.offerType || '';
+    document.getElementById('editDiscountPercentage').value = this.dataset.discount || '';
+    document.getElementById('editStartDate').value = this.dataset.start || '';
+    document.getElementById('editEndDate').value = this.dataset.end || '';
+
+    // Show/hide and enable/disable selects based on offerType
+    if (this.dataset.offerType === 'product') {
+      document.getElementById('editProductSelectDiv').style.display = '';
+      document.getElementById('editCategorySelectDiv').style.display = 'none';
+      document.getElementById('editProductSelect').disabled = false;
+      document.getElementById('editCategorySelect').disabled = true;
+      document.getElementById('editProductSelect').value = this.dataset.product || '';
+    } else if (this.dataset.offerType === 'category') {
+      document.getElementById('editProductSelectDiv').style.display = 'none';
+      document.getElementById('editCategorySelectDiv').style.display = '';
+      document.getElementById('editProductSelect').disabled = true;
+      document.getElementById('editCategorySelect').disabled = false;
+      document.getElementById('editCategorySelect').value = this.dataset.category || '';
+    } else {
+      document.getElementById('editProductSelectDiv').style.display = 'none';
+      document.getElementById('editCategorySelectDiv').style.display = 'none';
+      document.getElementById('editProductSelect').disabled = true;
+      document.getElementById('editCategorySelect').disabled = true;
+    }
+
+    document.getElementById('editModalOverlay').classList.remove('hidden');
+  });
+});
+
+document.getElementById('editCloseModalBtn').onclick = () => {
+  document.getElementById('editModalOverlay').classList.add('hidden');
+};
+document.getElementById('editCancelBtn').onclick = () => {
+  document.getElementById('editModalOverlay').classList.add('hidden');
+};
+
+document.addEventListener('DOMContentLoaded', () => {
+
+
+  const offerTableBody = document.querySelector('tbody');
+  const searchInput = document.getElementById('offerSearchInput');
+  const clearBtn = document.getElementById('clearSearchBtn');
+  const searchForm = document.getElementById('offerSearchForm');
+  const paginationDiv = document.getElementById('offerPagination');
+  const limit = 5;
+
+  // Show/hide clear button as user types
+  searchInput.addEventListener('input', function () {
+    clearBtn.style.display = this.value ? 'block' : 'none';
+  });
+  if (searchInput.value) clearBtn.style.display = 'block';
+
+  // Render offers table
+  function renderOffers(offers) {
+    offerTableBody.innerHTML = '';
+    if (!offers.length) {
+      offerTableBody.innerHTML = `
+        <tr>
+          <td colspan="7" class="px-6 py-4 text-center text-gray-500">
+            No offers found
+          </td>
+        </tr>
+      `;
+      return;
+    }
+    offers.forEach(offer => {
+      const now = new Date();
+      const start = new Date(offer.startDate);
+      const end = new Date(offer.endDate);
+      let status = '';
+      let statusClass = '';
+      if (!offer.isActive) {
+        status = 'Inactive';
+        statusClass = 'bg-red-100 text-red-600';
+      } else if (now < start) {
+        status = 'Scheduled';
+        statusClass = 'bg-yellow-100 text-yellow-600';
+      } else if (now > end) {
+        status = 'Expired';
+        statusClass = 'bg-gray-100 text-gray-600';
+      } else {
+        status = 'Active';
+        statusClass = 'bg-green-100 text-green-600';
+      }
+
+      offerTableBody.innerHTML += `
+        <tr class="hover:bg-gray-50">
+          <td class="px-6 py-4">${offer.offerType ? (offer.offerType.charAt(0).toUpperCase() + offer.offerType.slice(1)) : 'N/A'}</td>
+          <td class="px-6 py-4 font-medium">${offer.offerName}</td>
+          <td class="px-6 py-4">${offer.discountPercentage}%</td>
+          <td class="px-6 py-4">${offer.startDate ? new Date(offer.startDate).toLocaleDateString('en-IN', { year: 'numeric', month: 'short', day: 'numeric' }) : '-'}</td>
+          <td class="px-6 py-4">${offer.endDate ? new Date(offer.endDate).toLocaleDateString('en-IN', { year: 'numeric', month: 'short', day: 'numeric' }) : '-'}</td>
+          <td class="px-6 py-4">
+            <span class="status-badge ${statusClass} text-xs font-semibold px-3 py-1 rounded-full">${status}</span>
+          </td>
+          <td class="px-6 py-4 flex items-center gap-4">
+            <button title="Edit"
+              data-offer-id="${offer._id}"
+              data-offer-name="${offer.offerName}"
+              data-offer-type="${offer.offerType}"
+              data-discount="${offer.discountPercentage}"
+              data-start="${offer.startDate ? offer.startDate.slice(0,10) : ''}"
+              data-end="${offer.endDate ? offer.endDate.slice(0,10) : ''}"
+              data-product="${offer.offerType === 'product' ? offer.items[0] : ''}"
+              data-category="${offer.offerType === 'category' ? offer.items[0] : ''}"
+              class="edit-offer-btn text-blue-600 hover:text-blue-800 transition-colors duration-200">
+              <i class="fas fa-pen"></i>
+            </button>
+            <label class="relative inline-flex items-center cursor-pointer">
+              <input type="checkbox"
+                class="sr-only peer offer-status-toggle"
+                data-offer-id="${offer._id}"
+                ${offer.isActive ? 'checked' : ''}>
+              <div class="w-11 h-6 bg-gray-300 peer-focus:outline-none peer-focus:ring-2 peer-focus:ring-blue-400 rounded-full peer peer-checked:bg-green-500 transition-all duration-300"></div>
+              <div class="absolute left-1 top-1 w-4 h-4 bg-white rounded-full transition-transform duration-300 transform peer-checked:translate-x-5"></div>
+            </label>
+          </td>
+        </tr>
+      `;
+    });
+    attachOfferToggleListeners();
+    attachEditOfferListeners()
+  }
+
+  // Render pagination
+  function renderPagination(totalPages, currentPage, search) {
+    let html = '';
+    if (totalPages <= 1) {
+      paginationDiv.innerHTML = '';
+      return;
+    }
+    if (currentPage > 1) {
+      html += `<button class="px-3 py-1 border rounded bg-white hover:bg-gray-100 text-gray-700" data-page="${currentPage - 1}">Previous</button>`;
+    }
+    for (let i = 1; i <= totalPages; i++) {
+      html += `<button class="px-3 py-1 border rounded ${i === currentPage ? 'bg-blue-500 text-white' : 'bg-white hover:bg-gray-100 text-gray-700'}" data-page="${i}">${i}</button>`;
+    }
+    if (currentPage < totalPages) {
+      html += `<button class="px-3 py-1 border rounded bg-white hover:bg-gray-100 text-gray-700" data-page="${currentPage + 1}">Next</button>`;
+    }
+    paginationDiv.innerHTML = html;
+    paginationDiv.querySelectorAll('button[data-page]').forEach(btn => {
+      btn.onclick = () => {
+        fetchOffers(search, parseInt(btn.getAttribute('data-page')));
+      };
+    });
+  }
+
+  function attachEditOfferListeners() {
+  document.querySelectorAll('.edit-offer-btn').forEach(btn => {
+    btn.onclick = function () {
+      document.getElementById('editOfferId').value = this.dataset.offerId || '';
+      document.getElementById('editOfferName').value = this.dataset.offerName || '';
+      document.getElementById('editOfferType').value = this.dataset.offerType || '';
+      document.getElementById('editDiscountPercentage').value = this.dataset.discount || '';
+      document.getElementById('editStartDate').value = this.dataset.start || '';
+      document.getElementById('editEndDate').value = this.dataset.end || '';
+
+      if (this.dataset.offerType === 'product') {
+        document.getElementById('editProductSelectDiv').style.display = '';
+        document.getElementById('editCategorySelectDiv').style.display = 'none';
+        document.getElementById('editProductSelect').disabled = false;
+        document.getElementById('editCategorySelect').disabled = true;
+        document.getElementById('editProductSelect').value = this.dataset.product || '';
+      } else if (this.dataset.offerType === 'category') {
+        document.getElementById('editProductSelectDiv').style.display = 'none';
+        document.getElementById('editCategorySelectDiv').style.display = '';
+        document.getElementById('editProductSelect').disabled = true;
+        document.getElementById('editCategorySelect').disabled = false;
+        document.getElementById('editCategorySelect').value = this.dataset.category || '';
+      } else {
+        document.getElementById('editProductSelectDiv').style.display = 'none';
+        document.getElementById('editCategorySelectDiv').style.display = 'none';
+        document.getElementById('editProductSelect').disabled = true;
+        document.getElementById('editCategorySelect').disabled = true;
+      }
+
+      document.getElementById('editModalOverlay').classList.remove('hidden');
+    };
+  });
+}
+
+  // Fetch offers from backend
+  async function fetchOffers(search = '', page = 1) {
+    const res = await fetch(`/admin/offers/api?search=${encodeURIComponent(search)}&page=${page}&limit=${limit}`);
+    const data = await res.json();
+    renderOffers(data.offers);
+    renderPagination(data.totalPages, data.currentPage, search);
+  }
+
+  // Handle search submit
+  searchForm.addEventListener('submit', function(e) {
+    e.preventDefault();
+    fetchOffers(searchInput.value.trim(), 1);
+    clearBtn.style.display = searchInput.value ? 'block' : 'none';
+  });
+
+  // Handle clear button
+  clearBtn.addEventListener('click', function () {
+    searchInput.value = '';
+    fetchOffers('', 1);
+    clearBtn.style.display = 'none';
+  });
+
+  // Initial load (show all offers)
+  fetchOffers('', 1);
+
+  // Attach offer toggle listeners
+  function attachOfferToggleListeners() {
+    document.querySelectorAll('.offer-status-toggle').forEach(toggle => {
+      toggle.onchange = null;
+      toggle.addEventListener('change', async function() {
+        const offerId = this.dataset.offerId;
+        const newState = this.checked;
+        try {
+          const response = await fetch(`/admin/offers/toggle/${offerId}`, {
+            method: 'PATCH',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ isActive: newState })
+          });
+          const data = await response.json();
+          if (response.ok) {
+            // Update status badge in the same row
+            const row = this.closest('tr');
+            const statusBadge = row.querySelector('.status-badge');
+            const startDate = new Date(row.children[3].textContent);
+            const endDate = new Date(row.children[4].textContent);
+            const now = new Date();
+            let status, statusClass;
+            if (!newState) {
+              status = 'Inactive';
+              statusClass = 'bg-red-100 text-red-600';
+            } else if (now < startDate) {
+              status = 'Scheduled';
+              statusClass = 'bg-yellow-100 text-yellow-600';
+            } else if (now > endDate) {
+              status = 'Expired';
+              statusClass = 'bg-gray-100 text-gray-600';
+            } else {
+              status = 'Active';
+              statusClass = 'bg-green-100 text-green-600';
+            }
+            statusBadge.className = `status-badge ${statusClass} text-xs font-semibold px-3 py-1 rounded-full`;
+            statusBadge.textContent = status;
+            if (typeof showToast === 'function') showToast('Success', data.message, 'success');
+          } else {
+            this.checked = !newState;
+            if (typeof showToast === 'function') showToast('Error', data.message || 'Failed to update status', 'error');
+          }
+        } catch (error) {
+          this.checked = !newState;
+          if (typeof showToast === 'function') showToast('Error', 'Failed to update offer status', 'error');
+        }
+      });
+    });
+  }
+});
